[AE-1021] Add spark-sql shell  test case